not support caret right now

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
     },
     "hexDependencies": {
         "https://github.com/bpmsoasolutions/hexin-modules-test.git": {
-            "@bss/utils": "^1.0.0"
+            "@bss/utils": "1.0.0"
         }
     }
 }
