--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,8 @@
     "license": "MIT",
     "dependencies": {
         "@types/node": "^8.0.28",
-        "minimist": "^1.2.0"
+        "minimist": "^1.2.0",
+        "_bss_utils_": "^1.0.0"
     },
     "devDependencies": {
         "ava": "^0.22.0",
@@ -23,7 +24,7 @@
     },
     "hexDependencies": {
         "https://github.com/bpmsoasolutions/hexin-modules-test.git": {
-            "@bss/utils": "1.0.0"
+            "_bss_utils_": "1.0.0"
         }
     }
 }
