--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,8 @@
     "main": "lib/main.js",
     "scripts": {
         "test": "ava",
-        "prepublish": "tsc -p tsconfig.build.json"
+        "prepublish": "tsc -p tsconfig.build.json",
+        "build": "tsc -p tsconfig.build.json"
     },
     "keywords": [],
     "author": "",
